[&1.6] Issue 3400: Debugger buttons not visible when long stack trace
Fix for "large stack moves script buttons off screen". In case of a large stack there are now small left/right buttons for scrolling the stack. The same works for HTML panel status-path. If the scroll-buttons would be annoying they can be hidden and scrolling would be done using mouse wheel only.

http://code.google.com/p/fbug/source/detail?r=7749

--- a/extension/content/firebug/firebug.css
+++ b/extension/content/firebug/firebug.css
@@ -222,6 +222,11 @@ panelTab[selected="true"]:hover > panelTabMenu .menuTarget {
     list-style-image: url("chrome://firebug/skin/nav-down.png");
 }
 
+/* Evaluated scripts can take a lot of horizontal space on the toolbar so, this is the limit */
+#fbLocationList {
+    max-width: 180px;
+}
+
 /************************************************************************************************/
 /* Quick Info Box */
 
